--- a/lab/01/04/index.html
+++ b/lab/01/04/index.html
@@ -6,19 +6,25 @@
 
     <script>
         function displayBooleanTrue() {
-
+            const monbool = true;
+            console.log(monbool);
         }
 
         function displayName() {
-
+            const monnom = "Damien";
+            console.log(monnom);
         }
 
         function displayNameUppercase() {
-
+            const monnom = "Damien";
+            console.log(monnom.toUpperCase());
         }
 
         function displaySum() {
-
+            const int1 = 10;
+            const int2 = 10.25;
+            let somme = int1 + int2;
+            console.log(somme);
         }
     </script>
 
