--- a/lab/02/01/index.html
+++ b/lab/02/01/index.html
@@ -5,6 +5,14 @@
     <meta charset="utf-8">
 
     <script>
+        function isModuloZero( int1, int2){
+            let monbool = false;
+            if(int1 % int2 === 0){
+                monbool = true;
+            }
+            return monbool;
+        }
+
     </script>
 
 </head>
