--- a/lab/02/02/index.html
+++ b/lab/02/02/index.html
@@ -5,6 +5,33 @@
     <meta charset="utf-8">
 
     <script>
+        function isItWeekendYet(jour){
+            switch(jour){
+                case "lundi":
+                    console.log("Hélas, non ! C'était hier !");
+                    break;
+                case "mardi":
+                    console.log("Hélas, non !");
+                    break;
+                case "mercredi":
+                    console.log("Hélas, non ! Toujours pas !");
+                    break;
+                case "jeudi":
+                    console.log("Hélas, non ! Mais bientôt !");
+                    break;
+                case "vendredi":
+                    console.log("Oui !");
+                    break;
+                case "samedi":
+                    console.log("Oui ! Profite bien !");
+                    break;
+                case "dimanche":
+                    console.log("Oui ! Mais c'est la fin !");
+                    break;
+                default:
+                    console.log("Hélas, non ! Tu es sûr que ${jour} est un jour qui existe ?");
+            }
+        }
     </script>
 
 </head>
