--- a/lab/02/01/index.html
+++ b/lab/02/01/index.html
@@ -6,6 +6,9 @@
 
     <script>
         function isModuloZero( int1, int2){
+            if(int1 < int2){
+                return ("Attention Arg 2 doit être inférieur à Arg 1 !");
+            }
             let monbool = false;
             if(int1 % int2 === 0){
                 monbool = true;
