--- a/lab/02/03/index.html
+++ b/lab/02/03/index.html
@@ -8,7 +8,7 @@
         function sequence(entier){
             let plage = -entier;
             let res = 0;
-            for(plage; plage < entier; plage ++){
+            for(plage; plage <= entier; plage ++){
                 if(plage % 2 === 0){
                     res += plage ** 4; 
                 }
